# python-clean-architecture

./: .coveralls.yaml  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  groups  notatki.txt  project.config  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: code_quality.yml  code_security.yml
conf/: requirements.txt
devops/: .env  Dockerfile  Dockerfile.multi_python  __init__.py
devops/commands/: __init__.py  bump.py  bump_version.py  dist_build.py  publish.py  test.py
devops/requirements/: _core-test.txt  _integration-test.txt  ci.txt  core.txt  dev.txt
devops/utils/: os.py  repo.py  version.py
devops/utils/tests/: test_os.py  test_version.py
dharma/: __init__.py  conftest.py  exceptions.py  utils.py
dharma/compat/: serializers.py
dharma/compatibilities/: db.py
dharma/data/: __init__.py  exceptions.py
dharma/data/entities/: entity.py
dharma/data/formulae/: __init__.py  predicate.py
dharma/data/tests/: test_predicate.py
dharma/data/tests/traits/: test_assignment.py  test_validation.py
dharma/data/traits/: __init__.py  base.py  constructors.py  nature.py  trait.py  validation.py
dharma/domain/: policy.py
dharma/domain/entities/: entity.py
dharma/domain/repos/: base.py  file.py  in_memory.py  tinydb.py
dharma/domain/repos/tests/: test_in_memory.py
dharma/domain/tests/: test_policy.py
dharma/entities/: __init__.py  entity.py  value_object.py
dharma/traits/: __init__.py  base.py  definition.py  nature.py  simple_traits.py  type_based.py
dharma/utils/: __init__.py  collections.py  compare.py  config.py  exceptions.py  imports.py  inspect.py  operator.py  operators.py  os.py  sentinel.py  serialization.py
dharma/utils/tests/: factories.py  test_functools.py  test_operators.py  test_serialization.py
dharma/utils/tests/collections/: test_get_duplicates.py  test_iterate_over_values.py
docs/: FAQ.md  PRINCIPLES.md  README.md  readme.md
docs/adl/: 000-architectural-decision-log-introduced.md  001-entity-and-the-source-of-its-id.md  README.md  readme.md
docs/issue-templates/: bug-report.md  commit-message.md  pull-request.md
docs/notes/: 010_big_ball_of_mud_as_a_problem.md  011_django_views_and_forms.md  020_data_and_validation_-_how_it_could_be_done.md  README.md  future.md  readme.md
example_app/framework_ideas/: flow.py  logic_programming.py
examples/: application.py  dependency_injection.py  example1.py  visible_to.py  visible_to_lambda.py  visible_to_shifty.py
examples/application/: __init__.py  interfaces.py
examples/application/contact/: resources.py  use_cases.py
examples/clean_architecture/: README.md
examples/clean_architecture/application/: services.py
examples/clean_architecture/framework/: __init__.py  compat.py  dependency_injection.py  flow.py  logic.py  pyramid.py  use_case.py
examples/clean_architecture/notes/: 010_big_ball_of_mud_as_a_problem.md  01_-_architecture_blob_as_a_problem.md  020_data_and_validation_-_how_it_could_be_done.md  02_-_entities_how_it_could_be_done.md  future.md
examples/clean_architecture/transactions/: services.py
examples/config/: di.yaml
examples/contact/: entities.py  repos.py  resources.py  schemas.py  use_cases.py  validators.py
examples/ddd/: __init__.py  application.py  domain.py
examples/framework/: __init__.py  dependency_injection.py  domain.py  flow.py  pyramid.py  repo.py  use_case.py
examples/framework/integrations/: common.py  django.py  pyramid.py
examples/framework_ideas/: dependency_injection.py  domain.py  flow.py  use_case.py
examples/framework_ideas/integrations/: common.py  flask.py
examples/meetapp/: README.md
examples/meetapp/docs/: DESCRIPTION.md
examples/meetapp/framework_ideas/: logic_programming.py
examples/races/: entities.py
examples/users/: __init__.py  entities.py  interactors.py  model.py  repos.py  repositories.py  services.py  use_cases.py  validators.py
examples/users/users/: entities.py  validation.py
pca/: __init__.py  conftest.py  exceptions.py
pca/application/: interactor.py
pca/application/tests/: test_interactor.py
pca/data/: dao.py  descriptors.py  errors.py  observable.py  predicate.py  validation.py  values.py
pca/data/dao/: __init__.py  abstract.py  file.py  in_memory.py
pca/data/formulae/: __init__.py  predicate.py
pca/data/tests/: test_dao.py  test_descriptors.py  test_observable.py  test_predicate.py  test_validation.py
pca/data/traits/: __init__.py  nature.py  trait.py  validation.py
pca/domain/: __init__.py  entity.py  policy.py  repository.py  value_object.py
pca/domain/entities/: aggregation.py  entity.py
pca/domain/repos/: __init__.py  base.py  in_memory.py  tinydb.py
pca/domain/tests/: test_entity.py  test_policy.py  test_repository.py
pca/integration/: errors.py  tinydb.py
pca/integration/tests/: test_tinydb.py
pca/interfaces/: __init__.py  dao.py  entity.py  repository.py
pca/utils/: __init__.py  collections.py  compat.py  dependency_injection.py  errors.py  functools.py  imports.py  inspect.py  operators.py  os.py  sentinel.py  serialization.py
pca/utils/dependency_injection/: README.md  __init__.py  component.py  container.py  decorators.py  descriptors.py  errors.py
pca/utils/serialization/: __init__.py  ini.py  json.py  loaders.py  yaml.py
pca/utils/testing/: factories.py
pca/utils/tests/: test_dependency_injection.py  test_errors.py  test_functools.py  test_operators.py  test_serialization.py
tests/: conftest.py  factories.py  test_observable.py  validation.py
tests/data/: conftest.py  predicate.py
tests/data/traits/: assignment.py  observable.py  validation.py
tests/domain/: policy.py
tests/domain/repos/: in_memory.py
tests/utils/: test_operators.py
tests/utils/collections/: bunch.py  ordered_set.py
tests/utils/config/: test_config.py
tests/utils/imports/: a.py  b.py
tests/utils/inspect/: get_subclasses.py
(+45 files in other folders)
