[tool.poetry]
name = "python-clean-architecture"
version = "0.0.7"
description = "A Python toolkit for applications driven by the Clean Architecture"
authors = [
    "lhaze <github@lhaze.name>",
]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/pcah/python-clean-architecture"
repository = "https://github.com/pcah/python-clean-architecture"

keywords = [
    "python",
    "architecture",
    "design-patterns"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
]
packages = [
    { include = "pca" },
]

[tool.poetry.dependencies]
python = "^3.7"

"ruamel.yaml" = "^0.16.12"
JsonWeb = "0.8.2"
marshmallow = "^3.9.1"

[tool.poetry.dev-dependencies]
# "gitpython",
# 'twine',
# 'virtualenv',
# 'wheel',
# pep8-naming = "^0.11.1"

black = "^20.8b1"
coverage = "^5.3"
ipython = "^7.19.0"
mock = "^4.0.2"
pdbpp = "^0.10.2"
pyfakefs = "^4.3.2"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-flake8 = "^1.0.6"
pytest-mock = "^3.3.1"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
